--- a/config/config.toml
+++ b/config/config.toml
@@ -38,7 +38,7 @@ hook_max_buffer = 512
 # 日志gorm钩子配置
 [log_gorm_hook]
 # 数据库类型(目前支持的数据库类型：mysql/sqlite3/postgres)
-db_type = "sqlite3"
+db_type = "mysql"
 # 设置连接可以重用的最长时间(单位：秒)
 max_lifetime = 7200
 # 设置数据库的最大打开连接数
@@ -46,7 +46,7 @@ max_open_conns = 1
 # 设置空闲连接池中的最大连接数
 max_idle_conns = 1
 # 数据库表名
-table = "g_logger"
+table = "logger"
 
 # http配置
 [http]
@@ -143,7 +143,7 @@ password = ""
 # 是否开启调试模式
 debug = false
 # 数据库类型(目前支持的数据库类型：mysql/sqlite3/postgres)
-db_type = "sqlite3"
+db_type = "mysql"
 # 设置连接可以重用的最长时间(单位：秒)
 max_lifetime = 7200
 # 设置数据库的最大打开连接数
@@ -164,7 +164,7 @@ user = "root"
 # 密码
 password = "123456"
 # 数据库
-db_name = "gadmin"
+db_name = "goodcorn"
 # 连接参数
 parameters = "charset=utf8mb4&parseTime=True&loc=Local&allowNativePasswords=true"
 
