--- a/web/package.json
+++ b/web/package.json
@@ -17,10 +17,14 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0-beta.36",
     "@babel/runtime": "^7.3.1",
-    "antd": "^3.15.2",
+    "antd": "^3.16.2",
     "axios": "^0.18.0",
+    "babel-plugin-dva-hmr": "^0.4.1",
+    "babel-plugin-import": "^1.11.0",
     "classnames": "^2.2.5",
     "dva": "^2.4.1",
+    "ember": "^1.0.3",
+    "eslint-config-react-app": "^3.0.8",
     "history": "^4.7.2",
     "lodash": "^4.17.10",
     "lodash-decorators": "^6.0.0",
@@ -29,9 +33,11 @@
     "path-to-regexp": "^2.4.0",
     "prop-types": "^15.5.10",
     "qs": "^6.5.0",
+    "rc-tree-select": "^2.7.0",
     "react": "^16.6.3",
     "react-container-query": "^0.11.0",
     "react-document-title": "^2.0.3",
+    "redbox-react": "^1.6.0",
     "setprototypeof": "^1.1.0",
     "url-polyfill": "^1.0.10",
     "uuid": "^3.3.2"
@@ -39,10 +45,10 @@
   "devDependencies": {
     "@types/react": "^16.7.7",
     "@types/react-dom": "^16.0.10",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^9.0.0",
     "cross-env": "^5.1.1",
     "cross-port-killer": "^1.0.1",
-    "eslint": "^5.4.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-config-prettier": "^3.0.1",
     "eslint-plugin-babel": "^5.3.0",
@@ -51,17 +57,17 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-markdown": "^1.0.0-beta.6",
     "eslint-plugin-react": "^7.11.1",
-    "husky": "^1.2.0",
-    "lint-staged": "^8.1.0",
-    "prettier": "1.15.2",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.5",
+    "prettier": "^1.15.2",
     "stylelint": "^9.8.0",
     "stylelint-config-prettier": "^4.0.0",
     "stylelint-config-standard": "^18.0.0",
     "tslint": "^5.10.0",
     "tslint-config-prettier": "^1.10.0",
     "tslint-react": "^3.6.0",
-    "umi": "^2.4.4",
-    "umi-plugin-react": "^1.4.2"
+    "umi": "^2.6.13",
+    "umi-plugin-react": "^1.7.4"
   },
   "lint-staged": {
     "**/*.{js,jsx,less}": [
