--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0-beta.36",
     "@babel/runtime": "^7.3.1",
+    "ant-design-pro": "^2.3.1",
     "antd": "^3.16.2",
     "axios": "^0.18.0",
     "babel-plugin-dva-hmr": "^0.4.1",
@@ -34,11 +35,14 @@
     "prop-types": "^15.5.10",
     "qs": "^6.5.0",
     "rc-tree-select": "^2.7.0",
-    "react": "^16.6.3",
+    "react": "^16.8.6",
     "react-container-query": "^0.11.0",
     "react-document-title": "^2.0.3",
+    "react-dom": "^16.8.6",
     "redbox-react": "^1.6.0",
     "setprototypeof": "^1.1.0",
+    "umi": "^2.6.13",
+    "umi-plugin-react": "^1.7.4",
     "url-polyfill": "^1.0.10",
     "uuid": "^3.3.2"
   },
@@ -65,9 +69,7 @@
     "stylelint-config-standard": "^18.0.0",
     "tslint": "^5.10.0",
     "tslint-config-prettier": "^1.10.0",
-    "tslint-react": "^3.6.0",
-    "umi": "^2.6.13",
-    "umi-plugin-react": "^1.7.4"
+    "tslint-react": "^3.6.0"
   },
   "lint-staged": {
     "**/*.{js,jsx,less}": [
